Fix hoodie link typo

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ done</code></pre>
       </section>
       <section>
         <h2 class="full-slide">Hoodie</h2>
-        <h4><a href="http://hood.id">http://hood.ie</a></h4>
+        <h4><a href="http://hood.ie">http://hood.ie</a></h4>
         <aside>
           <ul>
             <li>Web framework</li>
